# portfolio-system-architect

./:  (2).gitignore  $null  .ai-context (2).md  .ai-context.md  .bandit.yml  .codecov.yml  .coveragerc  .coveragerc.cd  .dockerignore  .editorconfig  .env.example  .gigacodeignore  .git-commit-msg.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitpod.yml  .kodaignore  .mailmap  .pip-audit.toml  .pre-commit-config (2).yaml  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  .tmp_commit_msg.txt  .trivyignore  .trivyignorefs  .webappignore  .yamllint  0.19.3  1.35.0  404.html  ADVANCED.html  AGENTS_AND_TOOLS.md  AGENT_FIXES_REPORT.md  AGENT_FIX_COMPLETE.md  AI_CONFIG_INTEGRATION.html  AI_INSTRUCTIONS.md  AI_PROVIDER_SETUP.md  (+425 more)
apps/ai-config-manager/: README.md  __init__.py  main.py  master-config.yaml  package-lock.json  package.json  preload.js  pyproject.toml
apps/ai-config-manager/__tests__/: renderer.test.js
apps/ai-config-manager/ai-config-manager/: preload.js
apps/ai-config-manager/ai-config-mobile/: app.js
apps/ai-config-manager/api/: __init__.py
apps/ai-config-manager/components/: Tutorial.jsx
apps/ai-config-manager/config/: ai-config.yaml
apps/ai-config-manager/main/: index.js
apps/ai-config-manager/models/: __init__.py
apps/ai-config-manager/renderer/: index.html  renderer.js
apps/ai-config-manager/scripts/: monitor.js
apps/ai-config-manager/services/: __init__.py
apps/ai-config-manager/src/: config_integration.py  resource_pool.py  security.py  validators.py
apps/ai-config-manager/src/__tests__/: renderer.test.js
apps/ai-config-manager/src/adapters/: generate-huggingface.js
apps/ai-config-manager/src/main/: index.js
apps/ai-config-manager/tests/: config.test.js  conftest.py  test_basic.py  test_config_integration.py  test_config_manager.py
apps/ai-config-manager/utils/: __init__.py
apps/ai_config_manager/: .dockerignore  .gitignore  Dockerfile  README.md  REFACTORING_REPORT.md  __init__.py  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai_config_manager/.archive-js-legacy/: package-lock.json  package.json
apps/ai_config_manager/.archive-js-legacy/components/: Tutorial.jsx
apps/ai_config_manager/.archive-js-legacy/public/tutorials/: welcome.json
apps/ai_config_manager/.archive-js-legacy/renderer/: renderer.js
apps/ai_config_manager/src/: __init__.py  config_integration.py
apps/ai_config_manager/src/adapters/: generate-azure.js
apps/ai_config_manager/src/ai_config_manager/: config_manager.py  resource_pool.py  security.py  validators.py
apps/ai_config_manager/tests/: __init__.py  conftest.py  conftest_debug.py  simple_test.py  test_config.py  test_config_integration.py  test_config_manager.py  test_resource_pool.py  test_security.py  test_validators.py
apps/it_compass/: ARCHITECTURE.md  Dockerfile  LICENSE  README.md  README_sourcecraft.md  __init__.py  main.py  pyproject.toml  setup.py  setup.sh
apps/it_compass/config/: settings.json
apps/it_compass/decisions/: 0001-use-submodules-for-modularity.md
apps/it_compass/docs/: ARCHITECTURE.md  METHODOLOGY.md  PROJECT_ANALYSIS.md  PSYCHOLOGICAL_SUPPORT.md  SUPPORT_GUIDE.md  context_for_ai_analysis.md  skill-it-compass.md
apps/it_compass/docs/visuals/: README.md  kanban-board.md  markers-infographic.md  overview.mmd  presentation.md  workflow.mmd
apps/it_compass/examples/: usage_example.py
apps/it_compass/portfolio/portfolio/: QUICK_START.md
apps/it_compass/scripts/: reasoning_integration.py
apps/it_compass/src/: __init__.py  config_integration.py  it_compass_scanner.py  main.py
apps/it_compass/src/core/: __init__.py  api_integration.py  low_energy_mode.py  mental-support.py  mental_support.py  reasoning_integration.py  tracker.original.py  tracker.py  tracker_sourcecraft.py
apps/it_compass/src/data/: user_progress.json
apps/it_compass/src/data/markers/: git.json  (+17 more)
apps/it_compass/src/ui/: app.py  app_sourcecraft.py
apps/it_compass/src/utils/: marker_export.py  portfolio_gen.py
apps/it_compass/support/: community_guide.md  low_energy_mode.py
apps/it_compass/support/resources/: crisis_contacts.json  motivational_quotes.json
apps/it_compass/tests/: __init__.py  test_basic.py  test_config_integration.py  test_integration.py  test_integration_it_compass.py  test_tracker.py  test_tracker_integration.py  test_tracker_real.py
apps/mcp-server/: Dockerfile  README.md  mcp-config.json  pyproject.toml  requirements.txt
apps/mcp-server/config/: mcp-config.yaml
apps/mcp-server/mcp-server/src/: main.py
apps/mcp-server/mcp-server/tests/: test_mcp_server.py
apps/mcp-server/scripts/: validate-config.py
apps/mcp-server/src/: __init__.py  file_tools.py  git_tools.py  main.py
apps/mcp-server/src/tools/: chroma_tools.py  compass_tools.py  file_tools.py  git_tools.py  monitoring_tools.py
apps/mcp-server/tests/: test_basic.py  test_integration.py  test_integration_mcp_server.py  test_mcp_server.py  test_server_impl.py
apps/template-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
apps/template-service/src/: __init__.py  config.py  database.py  health.py  main.py
apps/template-service/src/core/: config.py  database.py  health.py
apps/template-service/tests/: __init__.py  test_basic.py  test_health.py  test_template_basic.py
python_server/: app.py  chat_handlers.py  config.json  main.py  pyproject.toml  requirements.txt  start_dev.py  start_server.py  task_manager.py
python_server/chat_service/: __init__.py  base.py  factory.py
python_server/chat_service/transports/: __init__.py  self_host.py  webpubsub.py
python_server/core/: __init__.py  chat_api.py  chat_model_client.py  credentials.py  model_config.py  runtime_config.py  utils.py
python_server/core/room_store/: __init__.py  azure_table.py  base.py  builder.py  memory.py  models.py
python_server/tests/: conftest.py  test_chat_api.py  test_chat_service.py  test_memory_room_store.py  test_model_config.py  test_readyz.py  test_room_metadata_integration.py  test_room_store.py  test_runtime_config.py
(+17056 files in other folders)
