[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-system-architect"
version = "0.1.0"
description = "Cognitive Agent System for Portfolio Architecture"
authors = [{name = "Control39", email = "control39@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cognitive-agent = "apps.cognitive_agent.main:main"

[tool.setuptools.packages.find]
where = ["src", "apps", ".agents"]

# -----------------------------
# Ruff: lint & format settings
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "legacy",
    "experiments",
    "site",
]

[tool.ruff.lint]
# E402: module level import not at top of file
# Игнорируем, т.к. в монорепозитории sys.path.insert должен идти ДО импортов Атомов из src/
# Это архитектурное решение, см. docs/architecture/decisions/ADR-014-monorepo-boundary.md
extend-ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
