[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-system-architect"
version = "0.1.0"
description = "Cognitive Agent System for Portfolio Architecture"
authors = [{name = "Control39", email = "leadarchitect@yandex.ru"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
  "requests",
  "python-dotenv",
  "typer",
  "rich",
  "tqdm"
]

[project.optional-dependencies]
ml = [
  "torch",
  "transformers"
]

[project.scripts]
cognitive-agent = "apps.cognitive_agent.scripts.scanner_main:main"

[tool.setuptools.packages.find]
where = ["."]

# -----------------------------
# Ruff: lint & format settings
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "legacy",
    "experiments",
    "site",
]

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
