[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-server"
version = "0.1.0"
description = "Chat and room management server"
authors = [{ name = "Z" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.9.2",
    "httpx>=0.28.1",
    "redis>=7.4.0",
    "passlib[bcrypt]>=1.7.4"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
