[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP (Model Context Protocol) Server for Career Autopilot — provides tools for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-ND-4.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "chromadb>=0.5.0",
    "gitpython>=3.1.43",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.5.0"
]

[project.scripts]
start-mcp = "src.main:main"
dev-run = "src.main:main_dev"

[project.urls]
Repository = "https://github.com/Control39/portfolio-system-architect"
Homepage = "https://github.com/Control39/portfolio-system-architect#readme"